--- a/package.json
+++ b/package.json
@@ -4,25 +4,38 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "MODE_ENV=development webpack-dev-server --open",
-    "build": "MODE_ENV=product webpack -p"
+    "start": "webpack-dev-server",
+    "build": "webpack"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/TikiTaka-DSM/TikiTaka-Front.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "css-loader": "^5.0.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "style-loader": "^2.0.0"
+  "bugs": {
+    "url": "https://github.com/TikiTaka-DSM/TikiTaka-Front/issues"
   },
+  "homepage": "https://github.com/TikiTaka-DSM/TikiTaka-Front#readme",
   "devDependencies": {
     "@babel/core": "^7.12.10",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/preset-env": "^7.12.10",
     "@babel/preset-react": "^7.12.10",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^5.0.1",
+    "file-loader": "^6.2.0",
+    "style-loader": "^2.0.0",
     "webpack": "^5.10.0",
-    "webpack-cli": "^4.2.0",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
+  },
+  "dependencies": {
+    "axios": "^0.21.0",
+    "html-webpack-plugin": "^4.5.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
+    "styled-components": "^5.2.1"
   }
 }
