--- a/.babelrc
+++ b/.babelrc
@@ -1,48 +1,3 @@
-const path = require("path");
-const HtmlWebpackPlugin = require("html-webpack-plugin");
-module.exports = {
-  entry: "./src/index.js",
-  output: {
-    path: path.resolve(__dirname, "dist"),
-    filename: "bundle.js",
-  },
-  module: {
-    rules: [
-      {
-        test: /\.css$/,
-        use: ["style-loader", "css-loader"],
-      },
-      {
-        test: /\.js$/,
-        exclude: /node_modules/,
-        use: {
-          loader: "babel-loader",
-          options: {
-            presets: ["@babel/preset-env", "@babel/preset-react"],
-          },
-        },
-      },
-      {test: /\.(jpg|png|jpeg|gif|svg)?$/,
-        use:[
-            {
-                loader: 'file-loader',
-                options: {
-                    name: '[name].[ext]',
-                    context: 'src/',
-                }
-            }
-        ]
-        )}
-    ],
-  },
-  resolve: {
-    extensions: [".js", ".jsx"],
-  },
-  plugins: [new HtmlWebpackPlugin({ template: "./public/index.html" })],
-  devServer: {
-    contentBase: path.join(__dirname, "dist"),
-    host: "localhost",
-    port: 3000,
-    open: true,
-  },
-};
+{
+  "presets": ["@babel/preset-env", "@babel/preset-react"]
+}
