--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "react-router-dom": "^5.2.0",
     "react-toastify": "^6.2.0",
     "redux": "^4.0.5",
+    "socket.io": "^3.1.0",
+    "socket.io-client": "^3.1.0",
     "styled-components": "^5.2.1"
   }
 }
